# destec-inova

./: Pipfile  README.md  behave.ini  pyproject.toml  requirements.txt  run.py
app/: __init__.py  jsonarray.py  schema.py
migrations/versions/: 115a1902816b_.py  e094bcad91f7_.py
tests/: test_factory.py  test_schema.py  test_validate.py
tests/behavior/features/: environments.py  json_endpoint.feature
tests/behavior/features/steps/: endpoint.py
